--- a/src/app/profile-gallery/profile-gallery.component.html
+++ b/src/app/profile-gallery/profile-gallery.component.html
@@ -3,7 +3,8 @@
 
     <div id="gallery" class="col-md-9">
       <div class="gallery">
-        <div class="gallery-pet fader" *ngFor="let pet of pets | nameFilter: searchText" (click)="selectedPet(pet)">
+        <div class="gallery-pet fader" *ngFor="let pet of pets | nameFilter: searchText" (click)="selectedPet(pet)"
+        >
           <img class="profile-picture" [src]="'https://pettinder.herokuapp.com/'+ pet.image" alt="profile picture">
           <div class="overlay">
             <div class="overlay-text">
@@ -63,11 +64,15 @@
         <section id="petProfile" class="tiny-dialog fader" *ngIf="petSelected">
           <h3>{{petSelected.name}}</h3>
           <p>{{petSelected.profileText}}</p>
-          <div class="dialog-centered">
+          <div class="dialog-centered row">
             <a type="button"
-               class="btn btn-primary btn-lg dialog-centered" routerLink="/setup-date/{{petSelected.name}}">
-              Setup date
+               class="col-lg-5 btn btn-primary btn-lg justify-content-center ml-4 mr-2" routerLink="/setup-date/{{petSelected.name}}">
+              Setup Date
               </a>
+            <a type="button"
+               class="col-lg-5 btn btn-danger btn-lg justify-content-center mr-3 ml-2" (click)="delete(petSelected.id)">
+              Delete Pet
+            </a>
           </div>
         </section>
 
