adds ngclass to profile-gallery.component.html

--- a/src/app/profile-gallery/profile-gallery.component.html
+++ b/src/app/profile-gallery/profile-gallery.component.html
@@ -3,7 +3,10 @@
 
     <div id="gallery" class="col-md-9">
       <div class="gallery">
-        <div class="gallery-pet fader" *ngFor="let pet of pets | nameFilter: searchText" (click)="selectedPet(pet)"
+        <div class="gallery-pet fader"
+             *ngFor="let pet of pets | nameFilter: searchText"
+             [ngClass]="{active: selectedPet === pet}"
+             (click)="selectedPet(pet)"
         >
           <img class="profile-picture" [src]="'https://pettinder.herokuapp.com/'+ pet.image" alt="profile picture">
           <div class="overlay">
