--- a/src/app/profile-gallery/profile-gallery.component.html
+++ b/src/app/profile-gallery/profile-gallery.component.html
@@ -6,8 +6,7 @@
         <div class="gallery-pet fader"
              *ngFor="let pet of pets | nameFilter: searchText"
              [ngClass]="{active: selectedPet === pet}"
-             (click)="selectedPet(pet)"
-        >
+             (click)="selectedPet(pet)">
           <img class="profile-picture" [src]="'https://pettinder.herokuapp.com/'+ pet.image" alt="profile picture">
           <div class="overlay">
             <div class="overlay-text">
