--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,6 @@
 @import url(http://fonts.googleapis.com/css?family=Gochi+Hand);
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,700italic,400,300,700);
-@import url(http://fonts.googleapis.com/css?family=Lato:100italic);
-/*! normalize.css v2.1.3 | MIT License | git.io/normalize */
+@import url(http://fonts.googleapis.com/css?family=Lato:100italic); /*! normalize.css v2.1.3 | MIT License | git.io/normalize */
 article, aside, details, figcaption, figure, footer, header, hgroup, main, nav, section, summary {
   display: block
 }
@@ -6477,4 +6476,3 @@ body {
 .gallery-pet:hover, .gallery-pet.active {
   transform: scale(1.03, 1.03);
 }
-
