--- a/src/app/date/setup-date/setup-date.component.html
+++ b/src/app/date/setup-date/setup-date.component.html
@@ -14,7 +14,7 @@
           <form [formGroup]="sendTextForm" (ngSubmit)="onSubmit()" class="mt-5">
             <label>Name</label>
             <input type="text" class="form-control" formControlName="name" placeholder="Name">
-            <button type="submit" class="btn btn-primary pull-right mt-2" (click)="textPet()">Let's Play</button>
+            <button type="submit" class="btn btn-primary pull-right mt-2">Let's Play</button>
           </form>
         </div>
       </div>
