adds popularity text

--- a/src/app/profile-gallery/profile-gallery.component.html
+++ b/src/app/profile-gallery/profile-gallery.component.html
@@ -66,7 +66,7 @@
         <section id="petProfile" class="tiny-dialog fader" *ngIf="petSelected">
           <h3>{{petSelected.name}}</h3>
           <p>{{petSelected.profileText}}</p>
-          <p>{{petSelected.popularity}}</p>
+          <p>{{popularity1}}</p>
           <div class="dialog-centered row">
             <a type="button"
                class="col-lg-5 btn btn-primary btn-lg justify-content-center ml-4 mr-2" routerLink="/setup-date/{{petSelected.name}}">
